test/errors/indexed_offsets_error/zs/numbits_in_array_expression_error.zs
package numbits_in_array_expression_error;

struct NumBitsInArrayExpressionError
{
    uint32 value;
    uint32 offsets[];
offsets[numbits(value)]:
    string fields[];
};
